<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WheCanreciveBlood">
  <LinearLayout
      android:background="#F3D7D7"
      android:id="@+id/linerlayoutwherecanrecive"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <TextView
        android:fontFamily="@font/gunplay2"
        android:gravity="center"
        android:text="@string/bishkek"
        android:layout_margin="2dp"
        android:padding="2dp"
        android:id="@+id/gorod1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_37_0312_541_913"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital1"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_8_0312_586_888"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital2"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_0312_301_082"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital3"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:gravity="center"
          android:text="@string/kant"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/gorod2"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_23_725000_03132_50665"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital5"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/profi_med_78_0550_508_899"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital6"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:gravity="center"
          android:text="@string/osh"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/gorod3"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/grj6_rm7"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital7"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_03222_43360"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital8"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_723500_226_03222_24058"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital9"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:gravity="center"
          android:text="@string/karakol"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/gorod4"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_82_722200_03922_52223"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital10"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:text="@string/_45_0800_111_8_888"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital11"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:gravity="center"
          android:text="@string/sokuluk"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/gorod5"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_724800_0312_320_303"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital12"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <TextView
          android:fontFamily="@font/gunplay2"
          android:text="@string/_1_996_3134_43080_996_3134_41468_996_3134_41471"
          android:layout_margin="2dp"
          android:padding="2dp"
          android:id="@+id/hospital13"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
  </LinearLayout>
</ScrollView>