<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    android:orientation="vertical"
        android:background="@drawable/giftbackgroundregistr"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectRegistrActivity">
                <ImageView
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="50dp"
                    android:src="@drawable/organ_donation"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"/>
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/nomad_blood_donation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/safelive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/beadonororrecipient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/buttonDonor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:onClick="onClickgotoDonorRegistActivity"
                        android:text="@string/donor"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonRecipient"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:onClick="onClickgotoRecipientRegistActivity"
                        android:text="@string/recipient"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <TextView
                    android:onClick="onCklickgobactoLoginActivity"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:id="@+id/arledyhaveaccount"
                    android:text="@string/arleadysighnup"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
    </LinearLayout>