<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/headerbackground"
        tools:context=".DonorRegistrationActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/headerbackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:background="@drawable/headerbackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/registraciyadonora"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zaregchtobprodoljit"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_imagedonorregistration"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center"
                        android:onClick="onCklickAddPhoto"
                        android:src="@drawable/profileimages"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <EditText
                        android:id="@+id/donorregistrenterfullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterpfullname"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/donorregistrenterEnteridnumberage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterage"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/donorregistrenterEnterphonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterphonenumber"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/bloodGroupsSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:entries="@array/bloodgroups"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/donorregistrenterEnterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enteremail"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/donorregistrenterEnterPaswword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterpassword"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/registrdonorbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:onClick="onClickRegistrDonor"
                        android:text="@string/sighnup"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/arledyhaveaccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="onCklickgobactoLoginActivity"
                        android:text="@string/arleadysighnup"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>