<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/headerbackground"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecipientActivity">
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ScrollView
                android:background="@drawable/headerbackground"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/recipientregist"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/zaregchtobprodoljit"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:onClick="onCklickAddPhotorecipient"
                        android:id="@+id/profile_imagerecipientregistration"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center"
                        android:src="@drawable/profileimages"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <EditText
                        android:id="@+id/recipientregistrenterfullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterpfullname"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/recipientregistrenterEnteridnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterage"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/recpientregistrenterEnterphonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterphonenumber"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/bloodRecipientGroupsSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#fff"
                        android:entries="@array/bloodgroups"
                        android:gravity="center" />
                    <EditText
                        android:id="@+id/recipientregistrenterEnterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enteremail"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/recipientregistrenterEnterPaswword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterpassword"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <Button
                        android:onClick="onClickRegistrRecipient"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:id="@+id/registrrecipientbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sighnup" />
                    <TextView
                        android:onClick="onCklickgobactoLoginActivity"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:id="@+id/arledyhaveaccount"
                        android:text="@string/arleadysighnup"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>